# cdogs-sdl

./: .astylerc  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  .travis.yml.cmake  BIG_FAT_NOTE  CMakeLists.txt  CMakeSettings.json  COPYING  CREDITS  README.md  README.md.cmake  _config.yml  appveyor.yml  appveyor.yml.cmake  bullets.json  downloads.html  feed.xml  guns.json  index.html  make.bat  make.sh  make_emscripten.ps1  make_emscripten.sh  make_gcw0.sh  make_package.bat  params.json  particles.json
src/: .sconsign  CMakeLists.txt  MakeWin.sh  Makefile  Makefile.win  SConstruct  XGetopt.c  XGetopt.h  actors.c  actors.h  ai.c  ammo_menu.c  ammo_menu.h  animated_counter.c  animated_counter.h  automap.c  autosave.c  autosave.h  blit.c  blit.h  briefing_menu.c  briefing_menu.h  briefing_screens.c  briefing_screens.c.orig  briefing_screens.h  camera.c  camera.h  campaigns.c  campaigns.h  cdogs.c  cdogsed.c  charsed.c  charsed.h  command_line.c  command_line.h  config.c  config.h  config.h.cmake  credits.c  credits.h  (+87 more)
src/base64/: README.txt  base64.c  main.c
src/cdogs/: AStar.c  AStar.h  CMakeLists.txt  XGetopt.c  XGetopt.h  actor_fire.c  actor_fire.h  actor_pickup.c  actor_pickup.h  actor_placement.c  actor_placement.h  actors.c  actors.h  ai.c  ai.h  ai_context.c  ai_context.h  ai_coop.c  ai_coop.h  ai_utils.c  ai_utils.h  algorithms.c  algorithms.h  ammo.c  ammo.h  animation.c  animation.h  automap.c  automap.h  blit.c  blit.h  bullet_class.c  bullet_class.h  c_array.c  c_array.h  camera.c  camera.h  campaign_entry.c  campaign_entry.h  campaigns.c  (+186 more)
src/cdogs/SDL_JoystickButtonNames/: CMakeLists.txt  SDL_joystickbuttonnames.c  SDL_joystickbuttonnames.h  db.h  db.h.cmake  gamecontrollerbuttondb.txt
src/cdogs/aheasing/: COPYING  easing.c  easing.h
src/cdogs/c_hashmap/: CMakeLists.txt  README  hashmap.c  hashmap.h  main.c
src/cdogs/collision/: collision.c  collision.h  minkowski_hex.c  minkowski_hex.h
src/cdogs/cwolfmap/: AUDIOWL1.H  CMakeLists.txt  LICENSE  README.md  audio.c  audio.h  audio_bs6.c  audio_bs6.h  audio_n3d.c  audio_n3d.h  audio_sod.c  audio_sod.h  audio_wl1.c  audio_wl1.h  audio_wl6.c  audio_wl6.h  audiobs6.h  audion3d.h  audiowl6.h  common.h  cwolfmap.c  cwolfmap.h  expand.c  expand.h  n3d.c  n3d.h  vswap.c  vswap.h
src/cdogs/cwolfmap/mame/: fmopl.c  fmopl.h
src/cdogs/cwolfmap/wad/: CMakeLists.txt  wad.c  wad.h  wad_config.h  waderrno.c  waderrno.h
src/cdogs/cwolfmap/zip/: CMakeLists.txt  zip.c
src/cdogs/draw/: char_sprites.c  char_sprites.h  draw.c  draw.h  draw_actor.c  draw_actor.h  draw_buffer.c  draw_buffer.h  draw_highlight.c  draw_highlight.h  drawtools.c  drawtools.h  nine_slice.c  nine_slice.h
src/cdogs/enet/: CMakeLists.txt  callbacks.c  compress.c  host.c  inet_pton_mingw.c  inet_pton_mingw.h  packet.c  peer.c  protocol.c  unix.c  win32.c
src/cdogs/hqx/: AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README  common.c  common.h  hq2x.c  hq3x.c  hq4x.c  hqx.h  init.c
src/cdogs/hud/: fps.c  fps.h  gauge.c  gauge.h  health_gauge.c  health_gauge.h  hud.c  hud.h  hud_defs.h  hud_num_popup.c  hud_num_popup.h  player_hud.c  player_hud.h  wall_clock.c  wall_clock.h
src/cdogs/mathc/: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  REFERENCE.md  mathc.c  mathc.h  run_tests.sh  test.c
src/cdogs/physfs/: .gitignore  .travis.yml  CMakeLists.txt  CREDITS.txt  Doxyfile  physfs.c  physfs.h  physfs_internal.h  physfs_platforms.h  physfs_unicode.c  premake5.lua
src/cdogs/physfs/archivers/: dir.c  wad.c  zip.c
src/cdogs/physfs/extras/: globbing.h  ignorecase.c  ignorecase.h
src/cdogs/physfs/platform/: beos.cpp  macosx.c  os2.c  pocketpc.c  posix.c  unix.c  windows.c
src/cdogs/physfs/test/: test_physfs.c  (+1 more)
src/cdogs/proto/: client.pb.c  client.pb.h  client.proto  generate.bat  generate.sh  msg.options  msg.pb.c  msg.pb.h  msg.proto  server.options  server.pb.c  server.pb.h  server.proto
src/cdogs/rlutil/: license.txt  rlutil.h
src/cdogs/stb/: SDL_stbimage.h
src/cdogs/yajl/: CMakeLists.txt  yajl_encode.c  yajl_gen.c  yajl_parser.c  yajl_tree.c
src/cdogsed/: CMakeLists.txt  add_pickup_dialog.c  add_pickup_dialog.h  campaign_options.c  cdogsed.c  char_editor.c  char_editor.h  charsed.c  charsed.h  destroy_objective_dialog.c  destroy_objective_dialog.h  editor_brush.c  editor_brush.h  editor_ui.c  editor_ui.h  editor_ui_campaign.c  editor_ui_campaign.h  editor_ui_cave.c  editor_ui_cave.h  editor_ui_chared.c  editor_ui_chared.h  editor_ui_classic.c  editor_ui_classic.h  editor_ui_color.c  editor_ui_color.h  editor_ui_common.c  editor_ui_common.h  editor_ui_interior.c  editor_ui_interior.h  editor_ui_objectives.c  editor_ui_objectives.h  editor_ui_static.c  editor_ui_static.h  editor_ui_static_additem.c  editor_ui_static_additem.h  editor_ui_weapons.c  editor_ui_weapons.h  exit_brush.c  exit_brush.h  file_dialog.c  (+11 more)
src/cdogsed/osdialog/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  osdialog.c  osdialog.h  osdialog_gtk2.c  osdialog_mac.m  osdialog_win.c  osdialog_zenity.c  test.c
src/include/: .sconsign  actors.h  ai.h  automap.h  blit.h  charsed.h  config.h  defs.h  draw.h  drawtools.h  events.h  files.h  game.h  gamedata.h  grafx.h  hiscores.h  input.h  joystick.h  keyboard.h  mainmenu.h  map.h  menu.h  mission.h  objs.h  password.h  pics.h  prep.h  sounds.h  sprcomp.h  sys_specifics.h  text.h  triggers.h  utils.h
src/json/: CMakeLists.txt  json.c  json.h
src/missions/: .sconsign  bem.h  bem.inc  ogre.h  ogre.inc
src/nuklear/: nuklear.h  nuklear_sdl_gl2.h
src/proto/: CMakeLists.txt  msg.options  msg.pb.c  msg.pb.h  msg.proto  pyproject.toml  readme
src/proto/nanopb/: CMakeLists.txt  nanopb-config-version.cmake
src/tests/: CMakeLists.txt  actor_test.c  animated_counter_test.c  autosave_test.c  c_array_test.c  c_hashmap_test.c  color_test.c  config_test.c  json_test.c  minkowski_hex_test  minkowski_hex_test.c  pic_test.c  player_test.c  utils_test.c  yajl_test.c
src/tests/cbehave/: CMakeLists.txt  ChangeLog  README.md  cbehave.c  cbehave.h
src/tinydir/: tinydir.h
(+990 files in other folders)
