add_subdirectory(hqx)
include_directories(hqx ${SDL_INCLUDE_DIR})
add_definitions(-DSTATIC)
set(CDOGS_SOURCES
	actor_placement.c
	actors.c
	ai.c
	ai_context.c
	ai_coop.c
	ai_utils.c
	algorithms.c
	ammo.c
	AStar.c
	automap.c
	blit.c
	bullet_class.c
	c_array.c
	camera.c
	campaign_entry.c
	campaigns.c
	character.c
	collision.c
	color.c
	config.c
	config_apply.c
	config_io.c
	config_json.c
	config_old.c
	damage.c
	defs.c
	door.c
	draw.c
	draw_buffer.c
	drawtools.c
	events.c
	files.c
	font.c
	game_events.c
	game_loop.c
	game_mode.c
	gamedata.c
	grafx.c
	grafx_bg.c
	handle_game_events.c
	hiscores.c
	hud.c
	joystick.c
	json_utils.c
	keyboard.c
	log.c
	los.c
	map.c
	map_archive.c
	map_build.c
	map_classic.c
	map_new.c
	map_object.c
	map_static.c
	mission.c
	mission_convert.c
	mouse.c
	music.c
	net_client.c
	net_server.c
	net_util.c
	objective.c
	objs.c
	palette.c
	particle.c
	path_cache.c
	pic.c
	pic_file.c
	pic_manager.c
	pickup.c
	pickup_class.c
	pics.c
	player.c
	player_template.c
	powerup.c
	quick_play.c
	screen_shake.c
	sounds.c
	tile.c
	triggers.c
	utils.c
	vector.c
	weapon.c)
set(CDOGS_HEADERS
	actor_placement.h
	actors.h
	ai.h
	ai_context.h
	ai_coop.h
	ai_utils.h
	algorithms.h
	ammo.h
	AStar.h
	automap.h
	blit.h
	bullet_class.h
	c_array.h
	camera.h
	campaign_entry.h
	campaigns.h
	character.h
	collision.h
	color.h
	config.h
	config_io.h
	config_json.h
	config_old.h
	damage.h
	defs.h
	door.h
	draw.h
	draw_buffer.h
	drawtools.h
	events.h
	files.h
	font.h
	game_events.h
	game_loop.h
	game_mode.h
	gamedata.h
	grafx.h
	grafx_bg.h
	handle_game_events.h
	hiscores.h
	hud.h
	joystick.h
	json_utils.h
	keyboard.h
	log.h
	los.h
	map.h
	map_archive.h
	map_build.h
	map_classic.h
	map_new.h
	map_object.h
	map_static.h
	mission.h
	mission_convert.h
	mouse.h
	music.h
	net_client.h
	net_server.h
	net_util.h
	objective.h
	objs.h
	palette.h
	particle.h
	path_cache.h
	pic.h
	pic_file.h
	pic_manager.h
	pickup.h
	pickup_class.h
	pics.h
	player.h
	player_template.h
	powerup.h
	quick_play.h
	screen_shake.h
	sounds.h
	sys_config.h
	sys_specifics.h
	tile.h
	triggers.h
	utils.h
	vector.h
	weapon.h)
set(HQX_SOURCES
	hqx/common.c
	hqx/hq2x.c
	hqx/hq3x.c
	hqx/hq4x.c
	hqx/init.c)
set(HQX_HEADERS
	hqx/common.h
	hqx/hqx.h)
set(NANOPB_SOURCES
	proto/msg.pb.c
    proto/nanopb/pb_common.c
    proto/nanopb/pb_decode.c
    proto/nanopb/pb_encode.c
)
set(NANOPB_HEADERS
	proto/msg.pb.h
    proto/nanopb/pb.h
    proto/nanopb/pb_common.h
    proto/nanopb/pb_decode.h
    proto/nanopb/pb_encode.h
)

# enet
ADD_SUBDIRECTORY(enet)

# proto
include_directories(proto/nanopb)

add_library(cdogs STATIC
	${CDOGS_SOURCES} ${CDOGS_HEADERS}
	${HQX_SOURCES} ${HQX_HEADERS}
	${NANOPB_SOURCES} ${NANOPB_HEADERS})
target_link_libraries(cdogs
	json
	${SDL_LIBRARY}
	${SDLIMAGE_LIBRARY}
	${SDLMIXER_LIBRARY}
	${ENet_LIBRARIES})
